globus-callout (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-callout (3.3-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-callout (3.3-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500

globus-callout (3.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Mon, 17 Feb 2014 15:25:00 -0500

globus-callout (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix some configure problems

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 12:54:05 -0500

globus-callout (3.1-1+gt6.@distro@) @distro@; urgency=low

  * Dependencies

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 11:19:39 -0500

globus-callout (3.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 10:50:32 -0500

globus-callout (2.4-1) unstable; urgency=low

  * GT-412: allow chaining of callouts and passing of env vars in the callout config

 -- Globus Toolkit <support@globus.org>  Thu, 06 Jun 2013 00:22:19 -0500

globus-callout (2.3-1) unstable; urgency=low

  * GT-390: globus_callout loader fails load plugins on systems with broken libtool-ltdl

 -- Globus Toolkit <support@globus.org>  Thu, 09 May 2013 15:30:49 -0500

globus-callout (2.2-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-callout (2.2-1) unstable; urgency=low

  * RIC-224: Eliminate some doxygen warnings
  * RIC-230: Remove obsolete globus_libtool_windows code

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:11 -0500

globus-callout (2.1-2) unstable; urgency=low

  * Update for 5.2.0 release
