@@ -1,3 +1,9 @@
+globus-callout (3.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 21 Apr 2014 09:37:06 -0400
+
 globus-callout (3.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
